k8s/reports-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reports-api
spec:
  replicas: 2
  selector:
    matchLabels:
      component: reports-api
  template:
    metadata:
      labels:
        component: reports-api
    spec:
      containers:
        - name: reports-api
          # image: laithharb/notifications-api:v2
          image: azrubael/mern5shop:pymq7env
          ports:
            - containerPort: 465
