k8s/store-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store
spec:
  replicas: 2
  selector:
    matchLabels:
      component: store
  template:
    metadata:
      labels:
        component: store
    spec:
      containers:
        - name: store
          # image: laithharb/store-app
          image: azrubael/mern5shop:reactnginx7
          ports:
            - containerPort: 80
